# Jaxson

./: .gitignore  CLAUDE.md  Cargo.toml  Package.swift  README.md
.cargo/: mutants.toml
.github/workflows/: ci.yml
Sources/JaxsonCore/: Mood.swift  RelationshipState.swift
Tests/JaxsonCoreTests/: MoodTests.swift  RelationshipStateTests.swift
crates/jaxson-affect/: Cargo.toml
crates/jaxson-affect/src/: engine.rs  lib.rs  sentiment.rs
crates/jaxson-agent/: Cargo.toml
crates/jaxson-agent/examples/: agent_demo.rs  persona_probe.rs
crates/jaxson-agent/src/: agent.rs  curiosity.rs  embedder.rs  error.rs  greeting.rs  lib.rs  persona.rs
crates/jaxson-app/: Cargo.toml
crates/jaxson-app/src/: logging.rs  main.rs  parental.rs  persist.rs
crates/jaxson-core/: Cargo.toml
crates/jaxson-core/examples/: state_machine_demo.rs
crates/jaxson-core/src/: affinity.rs  lib.rs  mood.rs  relationship.rs  scrub.rs
crates/jaxson-extract/: Cargo.toml
crates/jaxson-extract/examples/: extract_demo.rs  extract_probe.rs
crates/jaxson-extract/src/: error.rs  extractor.rs  lib.rs  parse.rs  prompt.rs
crates/jaxson-face/: Cargo.toml
crates/jaxson-face/examples/: raster_demo.rs
crates/jaxson-face/src/: lib.rs  raster.rs
crates/jaxson-llm/: Cargo.toml
crates/jaxson-llm/examples/: chat_demo.rs  embed_probe.rs  latency_bench.rs  llama_chat.rs
crates/jaxson-llm/src/: config.rs  error.rs  generator.rs  lib.rs  message.rs  ollama.rs  prompt.rs  text.rs
crates/jaxson-llm/src/backends/: llama.rs  mock.rs  mod.rs  scripted.rs
crates/jaxson-memory/: Cargo.toml
crates/jaxson-memory/src/: edge.rs  graph.rs  lib.rs  node.rs  retrieval.rs  sqlite.rs  store.rs
crates/jaxson-perception/: Cargo.toml
crates/jaxson-perception/examples/: piper_speak.rs  whisper_transcribe.rs
crates/jaxson-perception/src/: audio.rs  error.rs  lib.rs  stt.rs  tts.rs
crates/jaxson-perception/src/backends/: mod.rs  piper.rs  whisper.rs
crates/jaxson-safety/: Cargo.toml
crates/jaxson-safety/src/: filter.rs  lib.rs  parental.rs
docs/: ARCHITECTURE.md  BACKLOG.md  DEVELOPMENT.md  PRIVACY-SECURITY.md  REQUIREMENTS.md
