[workspace]
resolver = "2"
members = ["crates/*"]
# The egui GUI app pulls native windowing deps and can't be tested headlessly, so it's
# kept out of the workspace: CI (`--workspace` on Linux) and `cargo mutants` skip it.
# Build/run it directly: `cargo run --manifest-path crates/jaxson-app/Cargo.toml`.
exclude = ["crates/jaxson-app"]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ettoreferranti/Jaxson"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }
tempfile = "3"
