[package]
name = "jaxson-agent"
description = "The conversation loop: wires memory retrieval, the LLM, extraction, and the relationship state machine into a turn."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }
jaxson-core = { path = "../jaxson-core" }
jaxson-llm = { path = "../jaxson-llm" }
jaxson-memory = { path = "../jaxson-memory" }
jaxson-extract = { path = "../jaxson-extract" }
