[package]
name = "jaxson-agent"
description = "The conversation loop: wires memory retrieval, the LLM, extraction, and the relationship state machine into a turn."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
llama = ["jaxson-llm/llama"]

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
jaxson-core = { path = "../jaxson-core" }
jaxson-affect = { path = "../jaxson-affect" }
jaxson-llm = { path = "../jaxson-llm" }
jaxson-memory = { path = "../jaxson-memory" }
jaxson-extract = { path = "../jaxson-extract" }
