[package]
name = "jaxson-app"
description = "Jaxson's desktop shell: an egui window with the animated face and a chat box."
version = "0.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ettoreferranti/Jaxson"

# NOTE: intentionally NOT a workspace member (see root Cargo.toml `exclude`). It pulls
# native windowing deps and is verified by running on macOS, not by CI.

[features]
default = []
# Use the real local model (llama.cpp + Metal) instead of the demo brain. Needs cmake +
# a GGUF model at runtime (set JAXSON_MODEL). Build: `--features llama`.
llama = ["jaxson-llm/llama"]
# Persist memory encrypted-at-rest (SQLCipher) with the key held in the macOS Keychain.
# Pulls a C toolchain (vendored SQLCipher + OpenSSL); off by default so plain builds
# stay light and ephemeral. Build: `--features sqlite`. See docs/PRIVACY-SECURITY.md.
sqlite = ["jaxson-memory/sqlite", "dep:keyring", "dep:uuid"]
# Voice input: whisper.cpp STT + microphone capture (cpal). Build: `--features whisper`,
# and set JAXSON_WHISPER_MODEL to a whisper model (e.g. ggml-base.en.bin). See F2.1b.
whisper = ["jaxson-perception/whisper", "dep:cpal"]

[dependencies]
eframe = "0.29"
egui = "0.29"
jaxson-core = { path = "../jaxson-core" }
jaxson-face = { path = "../jaxson-face" }
jaxson-llm = { path = "../jaxson-llm" }
jaxson-memory = { path = "../jaxson-memory" }
jaxson-agent = { path = "../jaxson-agent" }
jaxson-perception = { path = "../jaxson-perception" }
directories = "5"
# Microphone capture for push-to-talk (whisper feature only).
cpal = { version = "0.15", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Structured local logging (NFR-4): the agent emits `tracing` events; the app installs
# a stderr + rolling-file subscriber. Filter with JAXSON_LOG.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
# macOS Keychain access for the DB encryption key (sqlite feature only).
keyring = { version = "3", features = ["apple-native"], optional = true }
# Random key generation for first-run DB encryption (sqlite feature only).
uuid = { version = "1", features = ["v4"], optional = true }
