[package]
name = "jaxson-extract"
description = "Turn conversation turns into memory-graph nodes and edges, via an LLM that emits structured JSON."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
jaxson-llm = { path = "../jaxson-llm" }
jaxson-memory = { path = "../jaxson-memory" }
