[package]
name = "jaxson-safety"
description = "Safety governance (FR-S1/S2/S3): content filtering + topic guardrails at a configurable strictness, plus the parental-control passcode that gates it."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
uuid = { workspace = true }
sha2 = "0.10"

[dev-dependencies]
serde_json = { workspace = true }
